--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -13,7 +13,9 @@ jobs:
       - name: Step one
         uses: actions/checkout@v2
       - name: Step two
-        run: env | sort
+        run: |
+          echo "Hello"
+          echo "World"
   job2:
     name: Second job
     runs-on: windows-latest
